[package]
name = "fernet"
version = "0.1.3"
authors = ["Alex Gaynor <agaynor@mozilla.com>", "Ben Bangert <bbangert@mozilla.com>"]
description = "An implementation of fernet in Rust."
repository = "https://github.com/mozilla-services/fernet-rs/"
homepage = "https://github.com/mozilla-services/fernet-rs/"
license = "MPL-2.0"
readme = "README.md"
edition = "2018"


[badges]
travis-ci = { repository = "mozilla-services/fernet-rs" }

[features]
fernet_danger_timestamps = []

[package.metadata.docs.rs]
features = [ "fernet_danger_timestamps" ]

[dependencies]
base64 = "0.11"
byteorder = "1"
openssl = "0.10"
getrandom = "0.1"

[dev-dependencies]
chrono = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
