[package]
name = "fernet"
version = "0.2.0"
authors = ["Alex Gaynor <agaynor@mozilla.com>", "Ben Bangert <bbangert@mozilla.com>"]
description = "An implementation of fernet in Rust."
repository = "https://github.com/mozilla-services/fernet-rs/"
homepage = "https://github.com/mozilla-services/fernet-rs/"
license = "MPL-2.0"
readme = "README.md"
edition = "2018"


[badges]
travis-ci = { repository = "mozilla-services/fernet-rs" }

[features]
default = ["openssl"]
fernet_danger_timestamps = []
rustcrypto = ["aes", "cbc", "sha2", "hmac", "subtle"]

[package.metadata.docs.rs]
features = ["fernet_danger_timestamps"]

[dependencies]
base64 = "0.21"
byteorder = "1"
openssl = { version = "0.10", optional = true }
getrandom = "0.2"
zeroize = { version = "1.0", features = ["zeroize_derive"] }
aes = { version = "0.8", optional = true }
cbc = { version = "0.1", optional = true, features = ["alloc"] }
hmac = { version = "0.12", optional = true }
sha2 = { version = "0.10", optional = true }
subtle = { version = "2.4", optional = true }


[dev-dependencies]
time = { version = "0.3", features = ["parsing"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
